log
Tue 23 Apr 2024 01:35:49 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1a0fc92
Tue 23 Apr 2024 01:39:37 PM UTC: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
775396b
Tue 23 Apr 2024 01:41:30 PM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:74:3: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   74 |   pos = hash(key,map->capacity);
      |   ^~~
      |   pow
hashmap.c:74:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:79:1: error: control reaches end of non-void function [-Werror=return-type]
   79 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7c1ce7e
Tue 23 Apr 2024 01:42:18 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
596e078
Tue 23 Apr 2024 01:44:55 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  6|4
total_score: 30/70
2ef1061
Tue 23 Apr 2024 01:45:21 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 30/70
c3e4457
Tue 23 Apr 2024 01:48:07 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:90:1: error: control reaches end of non-void function [-Werror=return-type]
   90 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e3f96bd
Tue 23 Apr 2024 01:49:46 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
ae8140a
Tue 23 Apr 2024 01:51:41 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
11c1c7a
Tue 23 Apr 2024 01:55:56 PM UTC: 
 hashmap.c | 18 +++---------------
 1 file changed, 3 insertions(+), 15 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:89: error: ‘*map->buckets’ is a pointer; did you mean to use ‘->’?
   76 |     while(map->buckets[pos]!=NULL && map->buckets[pos]->key!=NULL && strcmp(map->buckets->key, key) != 0){
      |                                                                                         ^~
      |                                                                                         ->
Compilation failed
008efa3
Tue 23 Apr 2024 01:59:10 PM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:28: error: ‘*map->buckets’ is a pointer; did you mean to use ‘->’?
   76 |     if (strcmp(map->buckets->key,key)==0) return map->buckets[pos];
      |                            ^~
      |                            ->
hashmap.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
   80 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fe0c89c
Tue 23 Apr 2024 01:59:58 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
   80 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6821c30
Tue 23 Apr 2024 02:00:19 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 30/70
4ba2598
Tue 23 Apr 2024 02:00:44 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 30/70
0d0eedf
Tue 23 Apr 2024 02:01:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
d7227dd
Tue 23 Apr 2024 02:02:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
ce24af5
Tue 23 Apr 2024 02:02:54 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
7218d40
Tue 23 Apr 2024 02:06:10 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|2
total_score: 50/70
24c5bcf
Tue 23 Apr 2024 02:09:38 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
1040b02
Tue 23 Apr 2024 02:10:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
5dc3bef
Tue 23 Apr 2024 02:14:54 PM UTC: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  12|2
total_score: 50/70
e1885af
Tue 23 Apr 2024 02:17:20 PM UTC: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  13|2
total_score: 50/70
2fb6311
Tue 23 Apr 2024 02:17:43 PM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  12|2
total_score: 50/70
5b54778
Tue 23 Apr 2024 02:18:05 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  12|2
total_score: 50/70
ca9dc00
Tue 23 Apr 2024 02:18:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
7d6c99c
Tue 23 Apr 2024 02:20:23 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  14|2
total_score: 50/70
b0e78d2
Tue 23 Apr 2024 02:21:01 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  14|2
total_score: 50/70
b6e6980
Tue 23 Apr 2024 02:21:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
9c95734
Tue 23 Apr 2024 02:22:38 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  14|2
total_score: 50/70
6aeffb4
Tue 23 Apr 2024 02:23:11 PM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  14|2
total_score: 50/70
8f06678
Tue 23 Apr 2024 02:23:54 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
f565c19
Tue 23 Apr 2024 02:26:55 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
3bc3bd1
Tue 23 Apr 2024 02:28:51 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  16|1
total_score: 60/70
d2351f7
Tue 23 Apr 2024 02:32:51 PM UTC: 
 hashmap.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  16|1
total_score: 60/70
37051c5
